--- a/simplebox/index.html
+++ b/simplebox/index.html
@@ -68,7 +68,7 @@
       margin-top: 0px;
       text-align:center
     }
-    section{
+    .art1{
       margin-top:24px;
       margin-bottom:40px;
       margin-left:16px;
@@ -81,19 +81,15 @@
 </head>
 <body>
 
-  <main class="container">
-    
+  <div class="container">
   <img src="./images/image-qr-code.png" alt="Eve" class="qrcode-img">
 
-
-
-  <section>
+  <div class="art1">
   <h1 class="intro">Improve your front-end skills by building projects</h1>
 
   <p class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  
-  </section>
-  </main>
+  </div>
+  </div>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
