--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ font-weight: 500;
   align-items: center;
   gap: 12px;
   /* justify-items: center; */
-  margin: 12px 24px;
+  margin: 12px 0px;
 }
 .author p{
   
@@ -101,18 +101,19 @@ font-weight: 500;
     <img class="pic1" src="./assets/images/illustration-article.svg" alt="web3 image">
 
     <article>
-  <h1>Learning</h1>
+  <h2>Learning</h2>
 
   <p class="pubdate">Published 21 Dec 2023</p>
 
-  <p class="title">HTML & CSS foundations</p>
+  <h3 class="title">HTML & CSS foundations</h3>
 
   <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
-</article>
-  <div class="author">
+<div class="author">
   <img class="avatar" src="./assets/images/image-avatar.webp" alt="">
   <p>Greg Hooper</p>
   </div>
+</article>
+  
   
     
   </main>
